trunk/OldArchive/4d3851f4e2b29ed0aef964d3ee654932-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp: In function ‘int main()’:
main.cpp:101:16: error: no match for ‘operator<’ (operand types are ‘int’ and ‘X’)
     assert(((2 < x) <= 4)(1)==3);
                ^
main.cpp:101:16: note: candidates are:
main.cpp:66:6: note: template<class T> auto operator<(X, T)
 auto operator<(X x, T t)
      ^
main.cpp:66:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:101:18: note:   cannot convert ‘2’ (type ‘int’) to type ‘X’
     assert(((2 < x) <= 4)(1)==3);
                  ^
main.cpp:78:6: note: template<class T> auto operator<(LowerBound<T>, T)
 auto operator<(LowerBound<T> l, T t)
      ^
main.cpp:78:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:101:18: note:   mismatched types ‘LowerBound<T>’ and ‘int’
     assert(((2 < x) <= 4)(1)==3);
                  ^
main.cpp:102:16: error: no match for ‘operator<’ (operand types are ‘int’ and ‘X’)
     assert(((2 < x) <= 4)(2)==3);
                ^
main.cpp:102:16: note: candidates are:
main.cpp:66:6: note: template<class T> auto operator<(X, T)
 auto operator<(X x, T t)
      ^
main.cpp:66:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:102:18: note:   cannot convert ‘2’ (type ‘int’) to type ‘X’
     assert(((2 < x) <= 4)(2)==3);
                  ^
main.cpp:78:6: note: template<class T> auto operator<(LowerBound<T>, T)
 auto operator<(LowerBound<T> l, T t)
      ^
main.cpp:78:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:102:18: note:   mismatched types ‘LowerBound<T>’ and ‘int’
     assert(((2 < x) <= 4)(2)==3);
                  ^
main.cpp:103:16: error: no match for ‘operator<’ (operand types are ‘int’ and ‘X’)
     assert(((2 < x) <= 4)(3)==3);
                ^
main.cpp:103:16: note: candidates are:
main.cpp:66:6: note: template<class T> auto operator<(X, T)
 auto operator<(X x, T t)
      ^
main.cpp:66:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:103:18: note:   cannot convert ‘2’ (type ‘int’) to type ‘X’
     assert(((2 < x) <= 4)(3)==3);
                  ^
main.cpp:78:6: note: template<class T> auto operator<(LowerBound<T>, T)
 auto operator<(LowerBound<T> l, T t)
      ^
main.cpp:78:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:103:18: note:   mismatched types ‘LowerBound<T>’ and ‘int’
     assert(((2 < x) <= 4)(3)==3);
                  ^
main.cpp:104:16: error: no match for ‘operator<’ (operand types are ‘int’ and ‘X’)
     assert(((2 < x) <= 4)(4)==4);
                ^
main.cpp:104:16: note: candidates are:
main.cpp:66:6: note: template<class T> auto operator<(X, T)
 auto operator<(X x, T t)
      ^
main.cpp:66:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:104:18: note:   cannot convert ‘2’ (type ‘int’) to type ‘X’
     assert(((2 < x) <= 4)(4)==4);
                  ^
main.cpp:78:6: note: template<class T> auto operator<(LowerBound<T>, T)
 auto operator<(LowerBound<T> l, T t)
      ^
main.cpp:78:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:104:18: note:   mismatched types ‘LowerBound<T>’ and ‘int’
     assert(((2 < x) <= 4)(4)==4);
                  ^
main.cpp:105:16: error: no match for ‘operator<’ (operand types are ‘int’ and ‘X’)
     assert(((2 < x) <= 4)(5)==5);
                ^
main.cpp:105:16: note: candidates are:
main.cpp:66:6: note: template<class T> auto operator<(X, T)
 auto operator<(X x, T t)
      ^
main.cpp:66:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:105:18: note:   cannot convert ‘2’ (type ‘int’) to type ‘X’
     assert(((2 < x) <= 4)(5)==5);
                  ^
main.cpp:78:6: note: template<class T> auto operator<(LowerBound<T>, T)
 auto operator<(LowerBound<T> l, T t)
      ^
main.cpp:78:6: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/4.8/cassert:43:0,
                 from main.cpp:2:
main.cpp:105:18: note:   mismatched types ‘LowerBound<T>’ and ‘int’
     assert(((2 < x) <= 4)(5)==5);
                  ^
